public/main.css
/* ... */
#individualpolls td.clinton.winner {
  background: #a2c1e1;
}

#individualpolls td.trump.winner {
  background: #f4a098;
}

#individualpolls #individualpolls td.winner.narrowonly {
  font-weight: 400;
}

#individualpolls td.narrowonly {
  height: 32px;
}

#individualpolls td.winner.narrowonly .winner {
  font-weight: 600;
}

#individualpolls td.numeric{
  text-align: center;
  border-left: 1px solid #cec6b9;
}

#individualpolls td.samplesize {
  text-align: right;
}

#individualpolls td.samplesize .sampleType {
  color: #777;
}

#individualpolls td.date{
  min-width: 70px;
  color: #777777;
}

#individualpolls p.notavailable {
  color: #666;
  font-size: 1em;
}

@media (min-width: 600px) {
  #individualpolls .narrowonly {
    display: none;
  }
}

@media (max-width: 600px) {

  #individualpolls td.numeric {
    text-align: center;
    white-space: nowrap;
  }

  #individualpolls .secondary {
    display: none;
  }

  #individualpolls th {
    padding: 0;
  }

  #individualpolls td {
    padding-left: 5px;
    padding-right: 5px;
  }
}

#demographic-wrapper {
  width: 100%;
  margin-top: -1em;
}

.demographic-container {
  width: 48%;
  display: inline-block;
  vertical-align: top;
  text-align: center;
  margin-top: 2em;
}

.demographic-container:nth-child(even) {
  float: right;
}

.demographic-container h3 {
  font-family: MetricWeb, sans-serif;
  font-size: 15px;
  font-weight: 400;
  padding: auto 5px;
  text-align: left;
  text-transform: uppercase;
  color: #333;
  margin-bottom: 0.5em;
}

.demographics-barcode-chart {
  max-width: 100%;
  overflow: visible;
}

@media (max-width: 500px) {
  .demographic-container {
    width: 100%;
  }

  .demographic-container:nth-child(even) {
    float: none;
  }
}


.article-figure__heading--state-winners-table {
  margin-bottom: 0.75em; /* Needed due to lack of subhead */
}

.state-winners-table {
  width: 100%;
  border-spacing: 0;
}

.state-winners-table th {
  font-size: 0.875em;
  min-width: auto;
  -webkit-font-smoothing: antialiased;
}

.state-winners-table td {
  border-bottom: 1px solid #CEC6B9;
  font-size: 1.06em;
  -webkit-font-smoothing: antialiased;
}

.state-winners-table__empty {
  border-bottom: 0;
}

.state-winners-table__primary-header th {
  text-transform: uppercase;
  text-align: left;
  border-bottom: 0;
  font-weight: 500;
  color: black;
  padding-left: 0.5em;
}

.state-winners-table__primary-header th:nth-child(2) {
  border-right: 1px solid #777;
}

.state-winners-table__secondary-header th {
  font-weight: normal;
  text-transform: uppercase;
  border-bottom: 1px solid #777;
  padding-bottom: 0.4em;
}

.state-winners-table__secondary-header th:first-child {
  text-align: left;
  padding-left: 0;
}

.state-winners-table__secondary-header th:nth-child(2) {
  border-right: 1px solid #777;
}

.state-winners-table__secondary-header th:nth-child(2),
.state-winners-table__secondary-header th:nth-child(3) {
  text-align: left;
  padding-left: 0.5em;
}

.state-winners-table tbody tr td:first-child {
  border-right: 1px solid #CEC6B9;
}

.state-winners-table tbody tr td:nth-child(4) {
  border-bottom: 1px solid #CEC6B9;
  border-right: 1px solid #777;
}

.state-winners-table__year {
  width: auto;
  text-align: left;
  padding-left: 0;
  font-weight: normal;
}

tbody .state-winners-table__year {
  color: #777;
}

.state-winners-table__state-winner,
.state-winners-table__federal-winner {
  width: 20%;
  text-align: right;
  padding-right: .5em;
}

/*.state-winners-table__state-winner.dem,
.state-winners-table__federal-winner.dem {
  color: #a2c1e1;
}

.state-winners-table__state-winner.gop,
.state-winners-table__federal-winner.gop {
  color: #f4a098;
}*/


.state-winners-table__winning-pct-state,
.state-winners-table__winning-pct-federal {
  width: 25%;
  padding: 0.3em 0;
}


.state-winners-table__winning-pct-bar {
  height: 1em;
  margin-right: 0.3em;
  float: left;
  background-color: #999;
}

.state-winners-table__winning-pct-bar.gop {
  background-color: #e03d46;
}

.state-winners-table__winning-pct-bar.dem {
  background-color: #579DD5;
}

.state-winners-table__republicans.gop-winner {
  color: #e03d46;
  font-weight: bold;
}

.state-winners-table__dems.dem-winner {
  color: #579DD5;
  font-weight: bold;
}

.state-winners-table__winning-pct-state-figure,
.state-winners-table__winning-pct-federal-figure {
  text-align: right;
}

.state-winners-table__winning-pct-state-figure {
  padding-right: 0.5em;
}

.state-winners-table__winning-pct-federal-figure {
  padding-right: 0;
}

